--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,19 @@
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
     font-size: 60%; /* controle das medidas rem */
-
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 body{
     background-color: var(--color-background);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 1rem;
 }
