--- a/styles.css
+++ b/styles.css
@@ -18,20 +18,43 @@
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
-    font-size: 60%; /* controle das medidas rem */
+    font-size: 60%;
+    /* controle das medidas rem */
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+html,
+body {
+    height: 100vh; /*height = altura*/
+}
 
-body{
+body {
     background-color: var(--color-background);
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1rem;
+}
+
+body,
+input,
+button,
+textarea {
+    font: 500 1.6rem Poppins;
+    /*
+font-weight: 500;
+font-family: Poppins;
+font-size: 1.6rem;
+*/
+    color: var(--color-text-base);
+}
+#container{
+    width: 90vw; /*width = largura*/
+    max-width: 700px;
+    
 }
