--- a/styles/main.css
+++ b/styles/main.css
@@ -58,3 +58,12 @@ font-size: 1.6rem;
     max-width: 700px;
     
 }
+
+@media(min-width: 1100px){
+    #page-landing #container{
+        max-width: 1100px;
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+    }
+}
