--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,8 @@
 
 html,
 body {
-    height: 100vh; /*height = altura*/
+    height: 100vh;
+    /*height = altura*/
 }
 
 body {
@@ -53,34 +54,16 @@ font-size: 1.6rem;
 */
     color: var(--color-text-base);
 }
-#container{
-    width: 90vw; /*width = largura*/
+
+#container {
+    width: 90vw;
+    /*width = largura*/
     max-width: 700px;
-    
+
 }
 
-@media(min-width: 1100px){
-    #page-landing #container{
-        max-width: 1100px;
-        display:grid;
-        grid-template-columns: 2fr 1fr 2fr;
-        grid-template-rows: 350px 1fr;
-        grid-template-areas:
-        "proffy image image"
-        "button button texting"
+@media(min-width:700px) {
+    :root {
+        font-size: 62.5%;
     }
-.logo-container{
-    grid-area: proffy;
-}
-.hero-image{
-    grid-area: image; 
-}
-.buttons-container{
-    grid-area: button;
-}
-.total-connections{
-    grid-area: texting;
-}
-
-
 }
