--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,7 +1,3 @@
-:root {
-    font-size: 40%;
-}
-
 #page-landing {
     background: var(--color-primary)
 }
@@ -10,16 +6,16 @@
     color: var(--color-text-in-primary);
 }
 
-.log-container img{
+.log-container img {
     height: 10rem;
 }
 
-.log-container{
+.log-container {
     text-align: center;
     margin-bottom: 3.2rem;
 }
 
-.log-container h2{
+.log-container h2 {
     font-weight: 500;
     font-size: 3.6rem;
     line-height: 4.6rem;
@@ -27,12 +23,12 @@
 }
 
 
-.hero-image{
+.hero-image {
     width: 100%
 }
 
-.buttons-container{
-    display:flex;
+.buttons-container {
+    display: flex;
     justify-content: center;
     margin: 3.2rem 0;
 }
@@ -55,34 +51,33 @@
     transition: background 0.2s;
 
     color: var(--color-button-text)
-
 }
 
-.buttons-container a img{
+.buttons-container a img {
     width: 4rem;
     margin-right: 2.4rem;
 }
 
-.buttons-container a.study{
+.buttons-container a.study {
     background: var(--color-primary-lighter);
 }
 
-.buttons-container a.study:hover{
+.buttons-container a.study:hover {
     background: var(--color-primary-light);
 }
 
 
 
-.buttons-container a.give-classes{
+.buttons-container a.give-classes {
     background: var(--color-secondary);
     margin-right: 0;
 }
 
-.buttons-container a.give-classes:hover{
+.buttons-container a.give-classes:hover {
     background: var(--color-secondary-dark);
 }
 
-.total-connections{
+.total-connections {
     font-size: 1.8rem;
 
     display: flex;
@@ -90,18 +85,56 @@
     justify-content: center;
 }
 
-.total-connections img{
+.total-connections img {
     margin-left: 0.8rem;
 }
 
+@media(max-width: 699px) {
+    :root {
+        font-size: 40%;
+    }
+}
 
+@media(min-width: 1100px) {
+    #page-landing #container {
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 1fr;
+        grid-template-areas:
+            "proffy image image"
+            "button button texting";
+        column-gap: 87px;
+        row-gap: 86px;
+    }
 
+    .logo-container {
+        grid-area: proffy;
+        text-align: initial;
+        align-self: center;
+        margin: 0;
+    }
 
+    .logo-container img {
+        height: 100%;
+        height: 127px;
+    }
 
+    .hero-image {
+        grid-area: image;
+        height: 350px;
+    }
 
+    .buttons-container {
+        grid-area: button;
+        justify-content: flex-start;
+        margin: 0;
+    }
 
+    .total-connections {
+        grid-area: texting;
+        justify-self: end;
+        font-size: 1.2rem;
+    }
 
-
-
-
-
+}
