--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -44,6 +44,13 @@ margin: 0 auto;
     color: var(--color-title-in-primary);
 }
 
+#search-teachers{
+    margin-top: 3.2rem;
+}
+
+#search-teachers label{
+    color: var(--color-text-in-primary)
+}
 
 
 
