--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body id="page-study">
+<body id="page-give-classes">
     <div id="container">
         <header class="page-header">
             <div class="top-bar-container">
@@ -32,7 +32,7 @@
             </div>
         </header>
         <main>
-            <form action="" id="page-give-classes">
+            <form action="/" id="page-give-classes">
                 <fieldset>
                     <legend>Seus dados </legend>
                     <div class="input-block">
@@ -63,18 +63,11 @@
                         <label for="subject">Matéria</label>
                         <select name="subject" id="subject" required>
                             <option value="">Selecione uma opção</option>
-                            <option value="" disabled="" hidden="">Selecione uma opção</option>
-                            <option value="1">Artes</option>
-                            <option value="2">Biologia</option>
-                            <option value="3">Ciências</option>
-                            <option value="4">Educação Física</option>
-                            <option value="5">Física</option>
-                            <option value="6">Geografia</option>
-                            <option value="7">História</option>
-                            <option value="8">Matemática</option>
-                            <option value="9">Português</option>
-                            <option value="10">Química</option>
-
+                            {%for subject in subjects %}
+                           <option value="{{loop.index}}" {{ "selected" if filters.subject == loop.index }}>
+                               {{subject}}
+                           </option>
+                           {%endfor%}
                         </select>
                     </div>
                     <div class="input-block">
@@ -95,13 +88,13 @@
                             <label for="weekday">Dia da semana</label>
                             <select name="weekday[]" request>
                                 <option value="">Selecione uma opção</option>
-                                <option value="1">Domingo</option>
-                                <option value="2">Segunda-feira</option>
-                                <option value="3">Terça-feira</option>
-                                <option value="4">Quarta-feira</option>
-                                <option value="5">Quinta-feira</option>
-                                <option value="6">Sexta-feira</option>
-                                <option value="6">Sábado</option>
+                               
+                                {%for weekday in weekdays %}
+                                <option value="{{loop.index0}}">
+                                    {{weekday}}
+                                </option>
+                                {%endfor %}
+    
                             </select>
                         </div>
 
