--- a/src/views/study.html
+++ b/src/views/study.html
@@ -32,64 +32,83 @@
                         <label for="subject">Matéria</label>
                         <select name="subject" id="subject">
                             <option value="" disabled="" hidden="">Selecione uma opção</option>
-                            <option value="1">Artes</option>
-                            <option value="2">Biologia</option>
-                            <option value="3">Ciências</option>
-                            <option value="4">Educação Física</option>
-                            <option value="5">Física</option>
-                            <option value="6">Geografia</option>
-                            <option value="7">História</option>
-                            <option value="8">Matemática</option>
-                            <option value="9">Português</option>
-                            <option value="10">Química</option>
+
+                            {%for subject in subjects %}
+                           <option value="{{loop.index}}" {{ "selected" if filters.subject == loop.index }}>
+                               {{subject}}
+                           </option>
+                           {%endfor%}<!-- 
+                            <option value="1" {{"selected" if filters.subject == "1"}}>Artes</option>
+                            <option value="2" {{"selected" if filters.subject == "2"}}>Biologia</option>
+                            <option value="3" {{"selected" if filters.subject == "3"}}>Ciências</option>
+                            <option value="4" {{"selected" if filters.subject == "4"}}>Educação Física</option>
+                            <option value="5" {{"selected" if filters.subject == "5"}}>Física</option>
+                            <option value="6" {{"selected" if filters.subject == "6"}}>Geografia</option>
+                            <option value="7" {{"selected" if filters.subject == "7"}}>História</option>
+                            <option value="8" {{"selected" if filters.subject == "8"}}>Matemática</option>
+                            <option value="9" {{"selected" if filters.subject == "9"}}>Português</option>
+                            <option value="10" {{"selected" if filters.subject == "10"}}>Química</option> -->
                         </select>
                     </div>
 
                     <div class="select-block">
                         <label for="weekday">Dia da semana</label>
                         <select name="weekday" id="weekday">
-                            <option value="" disabled="" hidden="">Selecione uma opção</option>
+
+                            {%for weekday in weekdays %}
+                            <option value="{{loop.index0}}" {{ "selected" if filters.weekday == loop.index0 }}>
+                                {{weekday}}
+                            </option>
+                            {%endfor %}
+
+                            <!-- <option value="" disabled="" hidden="">Selecione uma opção</option>
                             <option value="1">Domingo</option>
                             <option value="2">Segunda-feira</option>
                             <option value="3">Terça-feira</option>
                             <option value="4">Quarta-feira</option>
                             <option value="5">Quinta-feira</option>
                             <option value="6">Sexta-feira</option>
-                            <option value="6">Sábado</option>
+                            <option value="6">Sábado</option> -->
                         </select>
                     </div>
                     <div class="input-block">
                         <label for="time">Hora</label>
                         <!-- <input name="time" id="time" 
                         type="number" min ="0" max="24"> -->
-                        <input name="time" id="time" type="time">
+                        <input name="time" id="time" type="time" value="{{proffy.time}}">
                     </div>
                     <button type="submit">Filtrar</button>
                 </form>
             </div>
         </header>
         <main>
+
+            {%for proffy in proffys %}
+
             <article class="teacher-item">
                 <header>
-                    <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4"
-                        alt="Diego Fernandes">
-                    <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
-                    </div>
-                </header>
+                    <img src="{{proffy.avatar}}" alt="Diego Fernande{{proffy.name}}">
+                        <div>
+                            <strong>{{proffy.name}}</strong>
+                            <span>{{proffy.subject}}</span>
+                        </div>
+        </header>
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em
-                    laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já
-                    passaram por uma das minhas explosões.</p>
+        <p>{{proffy.bio}}</p>
 
-                <footer>
-                    <p>Preço/hora<strong>R$ 20,00</strong>
-                    </p>
-                    <button type="button">
-                        <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-                    </button>
-                </footer>
+        <footer>
+            <p>Preço/hora<strong>R$ {{proffy.const}}</strong>
+            </p>
+            <a href="https://api.whatsapp.com/send?1=pt_BR&phone=55{{proffy.whatsapp}}&
+                    text= Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button"
+                target="_blank">
+                <img src="images/icons/whatsapp.svg" alt="whatsapp"> Entrar em contato
+            </a>
+        </footer>
+        </article>
+
+        {%endfor%}
+
         </main>
     </div>
 
